--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
   },
   "require-dev": {
     "mockery/mockery": "^1.1",
-    "phpunit/phpunit": "^6.5"
+    "phpunit/phpunit": "^6.5",
+    "squizlabs/php_codesniffer": "^3.3"
   }
 }
