--- a/composer.json
+++ b/composer.json
@@ -39,5 +39,23 @@
     "mockery/mockery": "^1.1",
     "phpunit/phpunit": "^6.5",
     "squizlabs/php_codesniffer": "^3.3"
+  },
+  "scripts": {
+    "ci": [
+      "@composer cs",
+      "@composer test"
+    ],
+    "cs": [
+      "@php ./vendor/bin/phpcs --report-width=140 --standard=./phpcs.xml --runtime-set ignore_warnings_on_exit 1"
+    ],
+    "deploy": [
+      "sh ./resources/bin/deploy.sh"
+    ],
+    "test": [
+      "@php -d zend_extension=xdebug.so ./vendor/bin/phpunit --stop-on-failure"
+    ],
+    "validate-coverage": [
+      "@php -d zend_extension=xdebug.so ./resources/bin/validate-coverage-percentage.php ./tests/build/coverage/clover.xml 95"
+    ]
   }
 }
