--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
   },
   "require-dev": {
     "mockery/mockery": "^1.1",
-    "phpunit/phpunit": "^6.5",
+    "phpunit/phpunit": "^6.5 || ^7.5 || ^8.0",
     "squizlabs/php_codesniffer": "^3.3"
   },
   "scripts": {
