--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,8 @@
     "prettus/l5-repository": "2.6.*"
   },
   "require-dev": {
+    "brianium/paratest": "^2.0",
     "mockery/mockery": "^1.1",
-    "phpunit/phpunit": "^6.5 || ^7.5",
     "squizlabs/php_codesniffer": "^3.3"
   },
   "scripts": {
@@ -49,7 +49,7 @@
       "@php ./vendor/bin/phpcs --report-width=140 --standard=./phpcs.xml --runtime-set ignore_warnings_on_exit 1"
     ],
     "test": [
-      "@php -d zend_extension=xdebug.so ./vendor/bin/phpunit --stop-on-failure"
+      "@php -d zend_extension=xdebug.so ./vendor/bin/paratest --stop-on-failure"
     ],
     "validate-coverage": [
       "@php -d zend_extension=xdebug.so ./resources/bin/validate-coverage-percentage.php ./tests/build/coverage/clover.xml 95"
