--- a/composer.json
+++ b/composer.json
@@ -45,14 +45,8 @@
       "@composer cs",
       "@composer test"
     ],
-    "cs": [
-      "@php ./vendor/bin/phpcs --report-width=140 --standard=./phpcs.xml --runtime-set ignore_warnings_on_exit 1"
-    ],
-    "test": [
-      "@php -d zend_extension=xdebug.so ./vendor/bin/paratest --stop-on-failure"
-    ],
-    "validate-coverage": [
-      "@php -d zend_extension=xdebug.so ./resources/bin/validate-coverage-percentage.php ./tests/build/coverage/clover.xml 95"
-    ]
+    "cs": "@php ./vendor/bin/phpcs --report-width=140 --standard=./phpcs.xml --runtime-set ignore_warnings_on_exit 1",
+    "test": "@php -d zend_extension=xdebug.so ./vendor/bin/paratest --stop-on-failure",
+    "validate-coverage": "@php -d zend_extension=xdebug.so ./resources/bin/validate-coverage-percentage.php ./tests/build/coverage/clover.xml 95"
   }
 }
